--- a/assets/super-simple-stripe-button.css
+++ b/assets/super-simple-stripe-button.css
@@ -3,3 +3,8 @@ button.s3b-button {
   background: #6772e5 !important;
   border-radius: 3px;
 }
+
+img.s3b-logo {
+  height: 1.5em;
+  width: auto;
+}
